@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-31T08:17:24Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
+  "timestamp" : "2024-01-31T16:17:12Z",
+  "count" : 2,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -0, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
