@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-31T08:17:24Z",
-  "count_outdated" : 1160,
-  "uniques_outdated" : 735,
-  "count" : 1191,
+  "timestamp" : "2024-01-31T16:17:12Z",
+  "count_outdated" : 1161,
+  "uniques_outdated" : 736,
+  "count" : 1192,
   "uniques" : 753,
   "clones" : [
-    {
-      "timestamp": "2024-01-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-18T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-01-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
