@@ -1,3 +1,12 @@
+2024-01-31T16:17:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7729063406 # 74
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
+* notice: last 14d: unq all: 4 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 735 1160 / 753 1191
+* notice: next accum: outdated-unq outdated-all / unq all: 736 1161 / 753 1192
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2024-01-17] / [2024-01-31]
+
 2024-01-31T08:17:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7723077993 # 73
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
